add StringToUserConverter, update properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.main.allow-bean-definition-overriding=true
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
 logging.level.org.springframework.web=DEBUG
+
+server.port=9000
+management.port=9001
+management.address=127.0.0.1
