--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework:spring-oxm'
+
+    implementation 'com.thoughtworks.xstream:xstream:1.4.19'
 
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.11'
 
